# pydantic-meta-kit

./: README.md  pyproject.toml
pydantic_meta_kit/: __init__.py  exceptions.py  meta.py
tests/: test_meta.py
